--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Behroz Ahmad Ali
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Machine learning enthusiast
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://bhrzali.github.io/images/2016-08-28 07.40.57-1.jpg
 
 #
 # Flags below are optional
